// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox Confirm - Cancel 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
    <ui5-button
      data-action="Cancel"
      design="Transparent"
      icon=""
      style="min-width: 4rem;"
    >
      Cancel
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Confirmation
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Confirm - Cancel
  </span>
</ui5-dialog>
`;

exports[`MessageBox Confirm - OK 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
    <ui5-button
      data-action="Cancel"
      design="Transparent"
      icon=""
      style="min-width: 4rem;"
    >
      Cancel
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Confirmation
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Confirm - OK
  </span>
</ui5-dialog>
`;

exports[`MessageBox Error 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="Close"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      Close
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Error"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="message-error"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Error
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Error
  </span>
</ui5-dialog>
`;

exports[`MessageBox Information 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Information"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="message-information"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Information
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Information
  </span>
</ui5-dialog>
`;

exports[`MessageBox No Title 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
    <ui5-button
      data-action="Cancel"
      design="Transparent"
      icon=""
      style="min-width: 4rem;"
    >
      Cancel
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Confirmation
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    No Title
  </span>
</ui5-dialog>
`;

exports[`MessageBox Not open 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Success"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="message-success"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Custom Success
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Custom Success
  </span>
</ui5-dialog>
`;

exports[`MessageBox Show 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="Yes"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      Yes
    </ui5-button>
    <ui5-button
      data-action="No"
      design="Transparent"
      icon=""
      style="min-width: 4rem;"
    >
      No
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Confirm"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="question-mark"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Custom
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Custom
  </span>
</ui5-dialog>
`;

exports[`MessageBox Success 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Success"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="message-success"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Success
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Success
  </span>
</ui5-dialog>
`;

exports[`MessageBox Success w/ custom title 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Success"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="message-success"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Custom Success
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Custom Success
  </span>
</ui5-dialog>
`;

exports[`MessageBox Warning 1`] = `
<ui5-dialog
  header-text=""
  initial-focus=""
  opened=""
>
  <footer
    class="MessageBox-footer-0"
    slot="footer"
  >
    <ui5-button
      data-action="OK"
      design="Emphasized"
      icon=""
      style="min-width: 4rem;"
    >
      OK
    </ui5-button>
  </footer>
  <header
    class="MessageBox-header-0"
    data-type="Warning"
    slot="header"
  >
    <div
      class="MessageBox-icon-0"
    >
      <ui5-icon
        accessible-name=""
        name="message-warning"
      />
    </div>
    <ui5-title
      level="H5"
    >
      Warning
    </ui5-title>
  </header>
  <span
    class="Text-text-0 MessageBox-content-0"
  >
    Warning
  </span>
</ui5-dialog>
`;
